--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 UPSTASH_REDIS_REST_URL="https://ruling-racer-30869.upstash.io"
 UPSTASH_REDIS_REST_TOKEN="AXiVAAIjcDE5ODdkMDQ1MWZjZjg0YmNmYWU3MDUzZjI4NDdlMTk2M3AxMA"
-PROJECT_ID="muumdev"
+NEXT_PUBLIC_SITE_NAME="murat umutlu"
