--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"dependencies": {
 		"@next/mdx": "^13.5.4",
-		"@upstash/redis": "^1.23.3",
+		"@upstash/redis": "^1.34.3",
 		"contentlayer": "^0.3.4",
 		"framer-motion": "^10.16.4",
 		"lucide-react": "^0.284.0",
@@ -34,12 +34,12 @@
 		"@types/react": "^18.2.28",
 		"@types/react-dom": "^18.2.13",
 		"autoprefixer": "^10.4.16",
+		"mini-css-extract-plugin": "^2.9.0",
 		"postcss": "^8.4.31",
 		"postcss-nesting": "^12.0.1",
 		"rome": "^12.1.3",
 		"tailwindcss": "^3.3.3",
-		"tailwindcss-debug-screens": "^2.2.1",
-		"mini-css-extract-plugin": "^2.9.0"
+		"tailwindcss-debug-screens": "^2.2.1"
 	},
 	"pnpm": {
 		"overrides": {
