--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"fmt": "pnpm rome check . --apply-unsafe && pnpm rome format . --write"
 	},
 	"dependencies": {
+		"@headlessui/react": "^2.2.0",
 		"@next/mdx": "^13.5.4",
 		"@upstash/redis": "^1.34.3",
 		"contentlayer": "^0.3.4",
